# PneumoKITy

./: .dockerignore  Dockerfile  MANIFEST.in  pyproject.toml  requirements.txt
src/pneumokity/: pneumokity.py
src/pneumokity/database_tools/: db_functions.py
src/pneumokity/run_scripts/: initialise_run.py  run_stage1.py  run_stage2.py  screen_genes.py  tools.py
